<resources>
    <string name="app_name">Life Checkpoint</string>

    <string name="OK">Ok</string>
    <string name="Close">Close</string>
    <string name="FireStore_Error">Oops, an Error Related to FireStore occurred, either Google was taken by Aliens or their servers just blew up, at this point who knows</string>
    <string name="Generic_error">"something somehow isn't working"</string>

    // Para la pantalla de registro (SignIn)
    <string name="Sign_In">Sign In c:</string>
    <string name="enter_new_password"> Enter New Password</string>
    <string name="enter_new_username">Enter New Username</string>
    <string name="enter_new_password_again">Enter New Password Again</string>
    //para los errores de validacion, autenticacion y carga en firestore del SignIn
    <string name="error_usuario">please, Enter a Valid Username [6-16 char]</string>
    <string name="error_email">please, Enter a Valid Email</string>
    <string name="error_password">please, Enter a Valid password</string>
    <string name="error_password_confirmacion">password does not match</string>
    <string name="Re_enter_Fields">Please, Re-Enter the fields Correctly</string>
    <string name="LogIn_successful">Log In has been successful</string>
    <string name="error_SignIn_Firestore">Error creating firestore user or Signing you up,try again</string>
    //para los errores del LogIn
    <string name="error_LogIn">Email or Password are wrong, please re-enter them</string>
    <string name="empty_fields_LogIn">please, remove empty spaces or complete all the fields</string>
    //para pantallas de cargas
    <string name="Loading">Loading...just wait a sec</string>
    //para el Onboarding
    <string name="primer_fragment">Create Checkpoints of your life!</string>
    <string name="description_primer_fragment">Explain your current situation in life, in aspects like love, work, etc to the Entire World every time u feel to !</string>
    <string name="segundo_fragment">8,045,311,447 people</string>
    <string name="description_segundo_fragment">There is many people living or that have lived a similar life as you. Find, chat and ask/give advices to them !</string>
    <string name="Start_Onboarding">Start Now !</string>
    <string name="tercer_fragment">Track your Checkpoints!</string>
    <string name="description_tercer_fragment">Update creating threads of new checkpoints related to that specific aspect of your life</string>
    //bottom navigation bar
    <string name="checkpointtab">Checkpoint</string>
    <string name="rankingtab">Ranking</string>
    <string name="profiletab">Profile</string>
    //adding
    <string name="adding_new_checkpoint">New Checkpoint !</string>
    <string name="adding_new_checkpoint_update">New Daily Checkpoint Update !</string>

    <string-array name="names_checkpoint_choose">
        <item>Create Custom</item>
        <item>Love</item>
        <item>Family</item>
        <item>Friends</item>
        <item>Mental Health</item>
        <item>Work/Carrer</item>
        <item>Creativity</item>
        <item>Education/Learning</item>
        <item>Health/Fitness</item>
        <item>Hobbies/Interests</item>
    </string-array>

    <string-array name="Checkpoint_categories_list">
        <item>Love</item>
        <item>Family</item>
        <item>Friends</item>
        <item>Mental Health</item>
        <item>Work/Carrer</item>
        <item>Creativity</item>
        <item>Education/Learning</item>
        <item>Health/Fitness</item>
        <item>Hobbies/Interests</item>
        <item>Others</item>
    </string-array>

    //para el Activity q muestra las categorias de checkpoint
    <string name="Main_title_adding_new_checkpoint">Choose a Category</string>
    <string name="Secondary_title_adding_new_checkpoint">you can also create a custom one !</string>
    <string name="Main_title_adding_new_checkpoint_update">Choose a CheckPoint !</string>
    <string name="Secondary_title_adding_new_checkpoint_update">Just the last checkpoint you made of a category</string>
    <string name="NoCheckpointsUploaded">You haven\'t created any Checkpoints yet !</string>
    // para lo de agregar nueva categoria de checkpoint
    <string name="Hint_new_category">New Checkpoint Category Name</string>
    <string name="Main_title_new_category">Custom Checkpoint Category</string>
    <string name="Error_new_category">Just Letters and minimum length of 3 and maximum of 17</string>
    <string name="Post">Post</string>
    <string name="hint_put_checkPoint_text">Write your CheckPoint !</string>
    //para el Activity de crear Post
    <string name="toast_text_cant_empty">The Post Text cannot be Empty or have less than 20 characters</string>
    <string name="till_2_images_uploaded_only">You can only upload up to 2 images</string>
    //error o se ha guardado bien los post
    <string name="checkpoint_successfully_saved">The checkpoint has been successfully saved</string>
    <string name="checkpoint_error_saved">Has been an Error in Saving the Checkpoint</string>
    <string name="checkpoint_update_successfully_saved">The checkpoint Update has been successfully saved</string>
    <string name="checkpoint_update_error_saved">Has been an Error in Saving the Checkpoint Update</string>
    //Select Date and Country Activity
    <string name="Date_selecting">Select your birth date and Country:</string>
    <string name="NoDate_Country">Please pick a date and a country</string>
    <string name="DatePicker_dialog">Select your date of birth</string>
    //Checkpoint Post showing
    <string name="DailyCheckpointUpdates_Title">Daily Checkpoint Updates</string>
    <string name="Satisfaction_scale_text">Satisfaction Scale</string>
    <string name="textViewNoUpdates">There is no Updates for this Checkpoint yet</string>
    <string name="NoRewind">Can\'t rewind anymore</string>
    <string name="category_Filter_Title">Filter by Category</string>
    //Checkpoint Update
    <string name="hint_checkpoint_update">Write your CheckPoint Update!</string>
    //Checkpoint profile info
    <string name="Follow">Follow</string>
    <string name="Following">Following</string>
    <string name="CheckPoints_Created">CheckPoints Created</string>
    <string name="Followers">Followers</string>
    <string name="No_Checkpoints_category">There is no Checkpoints for this category yet !</string>
    <string name="No_Checkpoints_like">There is no Given likes yet !</string>
    <string name="Checkpoint_Updates"> Checkpoint Updates</string>
    //Users Followers/following list
    <string name="No_following_Users"> You are not Following any users yet!</string>
    <string name="No_followers_Users"> You don\'t have any Followers yet!</string>
    //Settings activity
    <string name="Settings_title"> Settings</string>
    <string name="Settings_Subtitle1">Personal Profile</string>
    <string name="ChangeUsername_Title">Change Username</string>
    <string name="ChangeProfPic_Title">Change Profile Picture</string>
    <string name="Settings_Subtitle2">Others</string>
    <string name="LogOut_Title">Log Out</string>
    <string name="Error1_changeUsername">Username must be at least 6 characters</string>
    <string name="Error2_changeUsername">Username must not contain spaces</string>
    <string name="Error3_changeUsername">Please check the username requirements</string>
    <string name="LogOutAlertDialog_Title">Are you sure you want to log out?</string>
    <string name="SuccesUsername_Title">Username Successfully Changed!</string>
    <string name="SuccesProfPic_Title">Profile Picture Successfully Changed!</string>
</resources>