<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Core.UI.Home"
    android:background="@color/naranja_Home">
    
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_blue_square"
        android:background="@drawable/rounded_blue_square"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_picture"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_blue_square"
        android:scaleType="fitXY"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Circle"
        app:layout_constraintVertical_bias="0.2"
        />

    <ImageView
        android:id="@+id/Configurations"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_blue_square"
        app:layout_constraintVertical_bias="0.28"
        app:layout_constraintHorizontal_bias="0.1"
        android:src="@drawable/vector_asset_settings"
        />

    <TextView
        android:id="@+id/userName"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:fontFamily="@font/happy"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_blue_square"
        app:layout_constraintVertical_bias="0.15"
        android:autoSizeTextType="uniform"
        android:maxWidth="250dp"
        android:maxLines="1"
        />

    <com.google.android.material.chip.Chip
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintBottom_toTopOf="@id/guideline_blue_square"
        app:layout_constraintEnd_toStartOf="@id/guidelineverticalMiddle"
        app:layout_constraintVertical_bias="0.2"
        app:chipBackgroundColor="@color/water_green"
        android:clickable="false"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/userAge"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintBottom_toTopOf="@id/guideline_blue_square"
        app:layout_constraintStart_toEndOf="@id/guidelineverticalMiddle"
        app:layout_constraintVertical_bias="0.2"
        app:chipBackgroundColor="@color/water_green"
        android:clickable="false"/>


    <com.google.android.material.chip.Chip
        android:id="@+id/Follow_button"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_blue_square"
        app:layout_constraintVertical_bias="0.27"
        app:layout_constraintHorizontal_bias="0.3"
        app:chipBackgroundColor="@color/white"
        app:chipIcon="@drawable/vector_asset_add"
        android:text="@string/Follow"
        android:checkable="true"
        app:checkedIconVisible="true"
        app:checkedIconEnabled="true"/>

    <ProgressBar
        android:id="@+id/FollowProgress"
        android:layout_width="40dp"
        android:layout_height="45dp"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_blue_square"
        app:layout_constraintVertical_bias="0.27"
        app:layout_constraintHorizontal_bias="0.3"
        android:visibility="gone"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline_basics_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_basics_end"
        app:layout_constraintTop_toTopOf="@id/guideline_basics_top"
        app:layout_constraintBottom_toBottomOf="@id/guideline_basics_bottom"
        app:cardCornerRadius="15dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <View
               android:layout_width="3dp"
               android:layout_height="0dp"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintStart_toEndOf="@id/guidelineCardview1"
               android:background="@color/black"/>

            <View
                android:layout_width="3dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/guidelineCardview2"
                android:background="@color/black"/>

            <TextView
                android:id="@+id/Checkpoints_created"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guidelineCardview1"
                app:layout_constraintBottom_toBottomOf="@id/guidelineCardviewBottom"
                app:layout_constraintTop_toBottomOf="@id/guidelineCardviewMiddle"
                android:text="@string/CheckPoints_Created"
                android:textAlignment="center"
                android:autoSizeTextType="uniform"
                />

            <TextView
                android:id="@+id/Num_checkpoints_created"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guidelineCardview1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guidelineCardviewMiddle"
                android:textAlignment="center"
                android:autoSizeTextType="uniform"/>

            <TextView
                android:id="@+id/followers"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@id/guidelineCardview1"
                app:layout_constraintEnd_toStartOf="@id/guidelineCardview2"
                app:layout_constraintBottom_toBottomOf="@id/guidelineCardviewBottom"
                app:layout_constraintTop_toBottomOf="@id/guidelineCardviewMiddle"
                android:text="@string/Followers"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/Num_followers"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@id/guidelineCardview1"
                app:layout_constraintEnd_toStartOf="@id/guidelineCardview2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guidelineCardviewMiddle"
                android:textAlignment="center"
                android:autoSizeTextType="uniform"/>

            <TextView
                android:id="@+id/following"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@id/guidelineCardview2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/guidelineCardviewBottom"
                app:layout_constraintTop_toBottomOf="@id/guidelineCardviewMiddle"
                android:text="@string/Following"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/Num_following"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@id/guidelineCardview2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guidelineCardviewMiddle"
                android:textAlignment="center"
                android:autoSizeTextType="uniform"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineCardview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.33"
                android:orientation="vertical" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineCardview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.66"
                android:orientation="vertical" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineCardviewMiddle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.6"
                android:orientation="horizontal" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineCardviewBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.97"
                android:orientation="horizontal" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelineTabStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineTabEnd"
        app:layout_constraintTop_toTopOf="@id/guidelineTabTop"
        app:layout_constraintBottom_toBottomOf="@id/guidelineTabBottom"
        android:background="@drawable/round_corners"
        android:theme="@style/Theme.Influencer.MD3"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineViewpager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_blue_square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.37"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_basics_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.43"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_basics_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.33"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_basics_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.11"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_basics_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.89"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineverticalMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTabStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTabEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTabTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.45"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTabBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineViewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.53"
        android:orientation="horizontal" />



</androidx.constraintlayout.widget.ConstraintLayout>